--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1050,22 +1050,65 @@ jobs:
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
 
-      - name: Install latest NDK
+      - name: Install latest NDK and Setup
         run: |
           latest_ndk=$(sdkmanager --list | grep -o "ndk;[0-9.]*" | sort -V | tail -1)
           echo "Installing $latest_ndk"
           sdkmanager "$latest_ndk"
-          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/$(echo $latest_ndk | cut -d';' -f2)" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$ANDROID_HOME/ndk/$(echo $latest_ndk | cut -d';' -f2)" | tee $GITHUB_ENV
+          echo "ANDROID_BUILD_TOOLS_VERSION=$(sdkmanager --list | grep -o 'build-tools;[0-9.]* ' | sort -V | tail -1 | sed 's/build-tools;//g')" | tee $GITHUB_ENV
+          echo "ANDROID_API_LEVEL=$(sdkmanager --list | grep -o "platforms;android-[0-9.]*" | sort -V | tail -1 | sed -s 's/platforms;android-//g')" | tee $GITHUB_ENV
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/emulator:$ANDROID_SDK_ROOT/tools:$ANDROID_SDK_ROOT/platform-tools:$ANDROID_SDK_ROOT/build-tools/${ANDROID_BUILD_TOOLS_VERSION}" >> $GITHUB_PATH
 
       - name: Bash
         shell: bash
         run: |
           NDK_TRIPLE="${{ matrix.EVENT_MATRIX }}"
-          EVENT_CMAKE_OPTIONS="'-DCMAKE_TOOLCHAIN_FILE=${ANDROID_NDK_HOME}/build/cmake/android.toolchain.cmake' '-DCMAKE_HOST_SYSTEM_NAME=$NDK_TRIPLE'"
+          EVENT_CMAKE_OPTIONS="'-DCMAKE_TOOLCHAIN_FILE=${ANDROID_NDK_HOME}/build/cmake/android.toolchain.cmake' '-DCMAKE_HOST_SYSTEM_NAME=$NDK_TRIPLE' -DANDROID_PLATFORM=latest"
           echo [cmake]: cmake -B build $EVENT_CMAKE_FLAGS
           cmake -B build $EVENT_CMAKE_OPTIONS
-          cmake --build build --target event_static
-#
+          cmake --build build
+
+      - name: Enable KVM
+        if: matrix.EVENT_MATRIX == 'x86_64-linux-android'
+        run: |
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+
+      - name: AVD cache
+        if: matrix.EVENT_MATRIX == 'x86_64-linux-android'
+        uses: actions/cache@v4
+        id: avd-cache
+        with:
+          path: |
+            ~/.android/avd/*
+            ~/.android/adb*
+          key: avd-${ANDROID_API_LEVEL}
+
+      - name: AVD Image
+        if: matrix.EVENT_MATRIX == 'x86_64-linux-android' && steps.avd-cache.outputs.cache-hit != 'true'
+        run: |
+          AVD_IMAGE="system-images;android-${ANDROID_API_LEVEL};default;x86_64"
+          sdkmanager "$AVD_IMAGE"
+          sdkmanager --licenses
+          echo "no" | avdmanager --verbose create avd --force -n test -k "$AVD_IMAGE"
+
+      - name: AVD Tests
+        if: matrix.EVENT_MATRIX == 'x86_64-linux-android'
+        run: |
+          adb start-server
+          emulator -avd test -no-window -gpu off -noaudio -no-boot-anim -no-metrics -camera-back none -memory 512 &
+          adb wait-for-device
+          cp -rL . /tmp/libevent_flat
+          tar -chf - -C /tmp libevent_flat | adb shell tar -xf - -C /data/local/tmp
+          adb shell ls /data/local/tmp/
+          adb shell chmod +x /data/local/tmp/libevent_flat/build/bin/regress
+          adb shell /data/local/tmp/libevent_flat/build/bin/regress
+          adb emu kill
+          adb kill-server
+
+
 #
 #  # ABI job without deploy
 #  abi-job:
